[build-system]
requires = ['setuptools>=74']
build-backend = 'setuptools.build_meta'


[project]
name = 'virtualenv-multiver'
description = 'Install a virtualenv containing many Python versions.'
authors = [
	{name = 'Beanbag, Inc.', email = 'questions@beanbaginc.com' },
]
license = { text = 'MIT' }
readme = 'README.md'
requires-python = '>=3.8'
dynamic = ['version']

dependencies = [
    'toml; python_version<"3.11"',
    'virtualenv',
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Other Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development',
    'Topic :: Software Development :: Testing',
]


[project.urls]
Homepage = 'https://github.com/beanbaginc/virtualenv-multiver'
Documentation = 'https://github.com/beanbaginc/virtualenv-multiver'
Repository = 'https://github.com/beanbaginc/virtualenv-multiver'


[project.scripts]
pydo = 'virtualenv_multiver.pydo:main'
virtualenv-multiver = 'virtualenv_multiver.main:main'


[tool.setuptools.dynamic]
version =  { attr = 'virtualenv_multiver.__version__' }
